part2-profiling/json_parser/src/snapshots/json_parser__lexer__check_basic_lexing.snap
---
source: src/lexer.rs
expression: "lexicize_complete(\"{ \\\"about\\\": 10 }\".to_string()).unwrap()"
---
TokenStream {
    tokens: [
        BraceOpen,
        String(
            "about",
        ),
        Colon,
        Number(
            10.0,
        ),
        BraceClose,
    ],
}
