part2-profiling/json_parser/src/snapshots/json_parser__lexer__check_basic_lexing2.snap
---
source: src/lexer.rs
expression: "lexicize_complete(\"123.4\".to_string()).unwrap()"
---
TokenStream {
    tokens: [
        Number(
            123.4,
        ),
    ],
}
