part2-profiling/json_parser/src/snapshots/json_parser__lexer__check_basic_lexing3.snap
---
source: src/lexer.rs
expression: "lexicize_complete(\"{\n            \\\"ability\\\": [1, null, false, 2.0, \\\"55\\\", { \\\"obj\\\": 213 }],\n            \\\"key\\\": { \\\"value\\\": 220 }\n        }\".to_string()).unwrap()"
---
TokenStream {
    tokens: [
        BraceOpen,
        String(
            "ability",
        ),
        Colon,
        BracketOpen,
        Number(
            1.0,
        ),
        Comma,
        Null,
        Comma,
        Bool(
            false,
        ),
        Comma,
        Number(
            2.0,
        ),
        Comma,
        String(
            "55",
        ),
        Comma,
        BraceOpen,
        String(
            "obj",
        ),
        Colon,
        Number(
            213.0,
        ),
        BraceClose,
        BracketClose,
        Comma,
        String(
            "key",
        ),
        Colon,
        BraceOpen,
        String(
            "value",
        ),
        Colon,
        Number(
            220.0,
        ),
        BraceClose,
        BraceClose,
    ],
}
