part2-profiling/json_parser/src/snapshots/json_parser__lexer__check_basic_lexing_exponential.snap
---
source: src/lexer.rs
expression: "lexicize_complete(\"[123.4e1, 123e1, 123.04e1, 123.04E1, 123.04E-1, 123.04E-12, 0.5e-12]]\".to_string()).unwrap()"
---
TokenStream {
    tokens: [
        BracketOpen,
        Number(
            1234.0,
        ),
        Comma,
        Number(
            1230.0,
        ),
        Comma,
        Number(
            1230.4,
        ),
        Comma,
        Number(
            1230.4,
        ),
        Comma,
        Number(
            12.304000000000002,
        ),
        Comma,
        Number(
            1.2304e-10,
        ),
        Comma,
        Number(
            5e-13,
        ),
        BracketClose,
        BracketClose,
    ],
}
